--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -138,6 +138,8 @@
 
           /* 给div添加border 不占用宽度，例如原来是50%， 不想因为添加了brder导致div宽度大于50%; box-sizing IE8才开始支持（ie8 得加-ms前缀）*/
 
+          /* div 标签实现自适应宽度： 使用Float浮动； div 默认样式宽度为100%， 只有浮动起来后才会变成自适应； */
+
           /*...样式实现，兼容IE6+，火狐下显示有点小问题*/
           .text_overflow{ width:27em; white-space:nowrap; text-overflow:ellipsis; -o-text-overflow:ellipsis; overflow:hidden;}
 
