--- a/ECMASscript/ES6/lesson_6.html
+++ b/ECMASscript/ES6/lesson_6.html
@@ -72,10 +72,8 @@
       <h4>9.指数运算</h4>
       <div>ES2016 新增了一个指数运算符（**）。</div>
 
-      <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
-      <script src="https://google.github.io/traceur-compiler/bin/BrowserSystem.js"></script>
-      <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script>
-      <script type="module">
+      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script type="text/babel">
         0b111110111 === 503; // true
         0o767 === 503; // true
 
@@ -124,7 +122,8 @@
         Math.log1p(1);  // 0.6931471805599453
         Math.log2(1024);    // 10
 
-        Math.signbit(-0); //true
+        // 当前label版本 未支持 signbit方法
+        // Math.signbit(-0); //true
 
         // var valNine = 2 ** 2; // 4
         // var valNine_2 = 2 ** 3; // 8
