--- a/ECMASscript/ES6/lesson_3.html
+++ b/ECMASscript/ES6/lesson_3.html
@@ -41,10 +41,8 @@
       <div>遍历Map结构</div>
       <div>输入模块的指定方法</div>
 
-      <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
-      <script src="https://google.github.io/traceur-compiler/bin/BrowserSystem.js"></script>
-      <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script>
-      <script type="module">
+      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script type="text/babel">
         // 数组解构赋值 相当于： let a = 1; let b = 2; let c = 3;
         let [a, b, c] = [1, 2, 3];
 
