--- a/ECMASscript/ES6/lesson_2.html
+++ b/ECMASscript/ES6/lesson_2.html
@@ -30,10 +30,8 @@
       <h4>5.global对象</h4>
       <div>顶层对象的属性与全局变量挂钩，被认为是JavaScript语言最大的设计败笔之一。ES6全局变量（global对象）将逐步与顶层对象的属性脱钩。</div>
 
-      <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
-      <script src="https://google.github.io/traceur-compiler/bin/BrowserSystem.js"></script>
-      <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script>
-      <script type="module">
+      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script type="text/babel">
         // 第二章  let（局部变量）、const（常量）关键字、块级作用域、顶层对象、global对象
         // ES6 有六种声明变量方式： var命令和function命令、let和const命令、import命令和class命令。
         const CANT_CHANGE = 2;
