--- a/ECMASscript/ES6/lesson_4.html
+++ b/ECMASscript/ES6/lesson_4.html
@@ -63,10 +63,8 @@
       <div>内嵌其他语言，模板字符串默认会将字符串转义，因此导致了无法嵌入其他语言。对字符串转义的放松，只在标签模板解析字符串时生效</div>
 
       <div id="result"> </div>
-      <script src="https://google.github.io/traceur-compiler/bin/traceur.js"></script>
-      <script src="https://google.github.io/traceur-compiler/bin/BrowserSystem.js"></script>
-      <script src="https://google.github.io/traceur-compiler/src/bootstrap.js"></script>
-      <script type="module">
+      <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+      <script type="text/babel">
         var strOne = "\u0061";
         // "a"
 
