jq动画bug调试更新

--- a/challenge_case/index.html
+++ b/challenge_case/index.html
@@ -16,7 +16,7 @@
 
     <body>
       <div class="markdown-body">
-        <h3><a id="flash_demo" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>flash Demo 列表</h3>
+        <h3><a id="flash_demo" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>日常bug调试 Demo 列表</h3>
         <ul>
           <li>
             <p>1.IE8位置bug调试；</p>
@@ -29,6 +29,7 @@
             <p>2.jq动画bug重现；</p>
             <ul>
               <li><a href="jq_animate.html" target="_blank">jq_animate.html</a></li>
+              <li><a href="dom_animate.html?debug" target="_blank">dom_animate.html</a></li>
             </ul>
           </li>
 
@@ -50,7 +51,6 @@
             <p>5.canvas实现飘落效果：</p>
             <ul>
               <li><a href="canvas_falling.html" target="_blank">参考demo</a></li>
-              <li><a href="canvas_falling_2.html" target="_blank">个人demo</a></li>
             </ul>
           </li>
 
