ES6学习笔记更新

--- a/ECMASscript/ES6/lesson_17.html
+++ b/ECMASscript/ES6/lesson_17.html
@@ -40,6 +40,7 @@
 
         <h4>5.co 模块</h4>
         <div>co 模块是著名程序员 TJ Holowaychuk 于2013年6月发布的一个小工具，用于 Generator 函数的自动执行。</div>
+        <div>源码只有几十行，非常简单。</div>
 
         <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
         <script type="text/babel">
