--- a/function.html
+++ b/function.html
@@ -8,7 +8,7 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon" />
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
-    
+
     <body>
         <h3>函数理解</h3>
         <script>
@@ -70,7 +70,7 @@
           function applyFun(arg1, arg2, arg3){
             var a_str = '1';
             var arg_count = arg1 + arg2 + arg3;
-            alert(this.a_str); 
+            alert(this.a_str);
             alert(arg_count);
           }
           // callFun.call(a, 1, 2, 3);
@@ -97,13 +97,17 @@
               }
           }
           // Assume that `expr` is an expression
-          function evalWith(d, expr) { 
-            // return new Function('with (this) { return ' + expr + ' }').call(d); 
+          function evalWith(d, expr) {
+            // return new Function('with (this) { return ' + expr + ' }').call(d);
             return (new Function(imports + 'return (' + expr + ')')).call(d)
           }
           // alert( evalWith(d, expr) );
 
           // 6. 关键字"new" 执行时，构造函数的执行过程
+          // 6.1 创建一个新对象；
+          // 6.2 将构造函数的作用域赋给新对象（因此this就指向了这个新对象）
+          // 6.3 执行构造函数中的代码（为这个心对象添加属性、方法）
+          // 6.4 返回新对象
           function constructorT(){
             // t 输出为 {}(空对象)， 但其可以共享构造函数原型的方法以及变量；t.b => 'bbbbbb', t.a = functon(){console.log('a fun');}
             var t = this;
@@ -115,6 +119,17 @@
           constructorT.prototype.b = 'bbbbbb';
           // TObj 即为构造函数中的 this
           var TObj = new constructorT();
+
+          // 7.在Javascript中,每一个函数实际上都是一个函数对象.
+          function fn(){}
+          var obj = {}
+          console.log(fn instanceof Function)//true
+          console.log(obj instanceof Object)//true
+          console.log(fn instanceof Object)//true
+          console.log(obj instanceof Function)//false
+          console.log(Function instanceof  Object); // true
+          console.log(Object instanceof Function);  // true
+
         </script>
     </body>
 </html>
