--- a/index.html
+++ b/index.html
@@ -167,6 +167,13 @@
           </li>
 
           <li>
+            <p>22.字体图标:</p>
+            <ul>
+              <li><a href="webfont/index.html" target="_blank">webfont/index.html</a></li>
+            </ul>
+          </li>
+
+          <li>
             <p>other:</p>
             <ul>
               <li><a href="challenge_case/index.html" target="_blank">项目开发中遇到的bug小demo</a></li>
