字体图标添加demo

--- a/cssCommonDemo.html
+++ b/cssCommonDemo.html
@@ -6,6 +6,7 @@
             各种CSS
         </title>
         <style>
+          /* 在线查CSS API： http://css.doyoe.com/ */
           /*css3 动画demo*/
           /* 关键样式：animation， 浏览器兼容： IE10+ */
           /* API: http://www.w3school.com.cn/cssref/pr_animation.asp*/
