--- a/cssFlexBox.html
+++ b/cssFlexBox.html
@@ -7,6 +7,7 @@
           伸缩布局盒
       </title>
       <style>
+        /* 在线查CSS API： http://css.doyoe.com/ */
         body { /*direction: rtl;*/ }
         .demo-container{ display: -webkt-flex; display: flex; -webkit-align-content: center; align-content: center; -webkit-flex-wrap: wrap; flex-wrap: wrap; }
         .demo-item{ margin: 10px; }
@@ -112,7 +113,7 @@
       <link rel="icon" href="favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     </head>
-    
+
     <body>
         <div class="demo-container">
           <div class="demo-item">
@@ -159,7 +160,7 @@
               <div class="flex-item1">flex1</div>
             </div>
           </div>
-          
+
         </div>
 
         <script>
