--- a/webfont/scene.html
+++ b/webfont/scene.html
@@ -12,6 +12,23 @@
     </head>
     <body>
       <div class="scene_wrap">
+          <ul>
+            <li>
+              <p>1.web app(H5) 小图标 放大失真问题解决；</p>
+              <ul>
+                <li>移动页面大多数情况没办法用雪碧图，用了雪碧图表示图片大小固定了，而移动端需要兼容不同屏幕大小的移动设备，这就需要图片是可以根据屏幕尺寸而改变的。
+                如果你的图尺寸是固定的，那就可以用雪碧图。</li>
+              </ul>
+            </li>
+
+            <li>
+              <p>2.PC端小图标性能更佳、小图标尺寸修改不用改原图；</p>
+              <ul>
+                <li>PC端优化请求体积时， 可将部分（不是所有）雪碧图换成小图标， 字体图标比雪碧图的http请求要少；（加载一个页面时可能有多张雪碧图，但字体图标文件就一个）</li>
+              </ul>
+            </li>
+
+          </ul>
 
       </div>
     </body>
