--- a/webfont/index.html
+++ b/webfont/index.html
@@ -19,17 +19,21 @@
         <h3><a id="webfont_demo" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>webfont Demo 列表</h3>
         <ul>
           <li>
-            <p>1.webfont 使用场景；</p>
+            <p>1.图标字体 使用场景；</p>
             <ul>
               <li><a href="scene.html" target="_blank">scene.html</a></li>
             </ul>
           </li>
 
           <li>
-            <p>2.webfont 开发流程；</p>
+            <p>2.图标字体 开发流程；</p>
             <ul>
               <li><a href="process.html" target="_blank">process.html</a></li>
             </ul>
+          </li>
+
+          <li>
+            <p>3.图标字体 demo；</p>
           </li>
 
         </ul>
