图标字体更新

--- a/iconfont/index.html
+++ b/iconfont/index.html
@@ -33,7 +33,12 @@
           </li>
 
           <li>
-            <p>3.图标字体 demo；</p>
+            <p>3.图标字体 实现方式demo；</p>
+            <ul>
+              <li><a href="iconfontDemo/demo_unicode.html" target="_blank">demo_unicode.html</a></li>
+              <li><a href="iconfontDemo/demo_fontclass.html" target="_blank">demo_fontclass.html</a></li>
+              <li><a href="iconfontDemo/demo_symbol.html" target="_blank">demo_symbol.html</a></li>
+            </ul>
           </li>
 
         </ul>
