--- a/iconfont/process.html
+++ b/iconfont/process.html
@@ -7,8 +7,8 @@
       <title>
           图标字体开发流程
       </title>
-      <link rel="icon" href="../../favicon.ico" type="image/x-icon" />
-      <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" />
+      <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
     </head>
     <body>
       <div class="process_wrap">
