--- a/iconfont/scene.html
+++ b/iconfont/scene.html
@@ -7,11 +7,13 @@
       <title>
           图标字体使用场景
       </title>
-      <link rel="icon" href="../../favicon.ico" type="image/x-icon" />
-      <link rel="shortcut icon" href="../../favicon.ico" type="image/x-icon" />
+      <link rel="icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="stylesheet" href="iconfontDemo/demo.css">
     </head>
     <body>
-      <div class="scene_wrap">
+      <div class="main markdown">
+          <h1>图标字体使用场景</h1>
           <ul>
             <li>
               <p>1.web app(H5) 小图标 放大失真问题解决；</p>
