图标字体demo更新

--- a/iconfont/index.html
+++ b/iconfont/index.html
@@ -16,7 +16,7 @@
 
     <body>
       <div class="markdown-body">
-        <h3><a id="webfont_demo" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>webfont Demo 列表</h3>
+        <h3><a id="iconfont_demo" class="anchor" href="#" aria-hidden="true"><span class="octicon octicon-link"></span></a>iconfont Demo 列表</h3>
         <ul>
           <li>
             <p>1.图标字体 使用场景；</p>
@@ -40,7 +40,6 @@
               <li><a href="iconfontDemo/demo_symbol.html" target="_blank">demo_symbol.html</a></li>
             </ul>
           </li>
-
         </ul>
       </div>
 
