--- a/iconfont/process.html
+++ b/iconfont/process.html
@@ -9,10 +9,20 @@
       </title>
       <link rel="icon" href="../favicon.ico" type="image/x-icon" />
       <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon" />
+      <link rel="stylesheet" href="iconfontDemo/demo.css">
     </head>
     <body>
-      <div class="process_wrap">
+      <div class="main markdown">
+          <h1>图标字体开发流程</h1>
+          <ul>
+            <li>
+              <p>1.获取字体图标：从网上下载免费图标字体、自定义生成图标字体；</p>
+              <ul>
+                <li>实际开发基本都是使用自定义生成的图标字体，使用软件：PS + AL软件。</li>
+              </ul>
+            </li>
 
+          </ul>
       </div>
     </body>
 </html>
