--- a/iconfont/scene.html
+++ b/iconfont/scene.html
@@ -26,7 +26,8 @@
             <li>
               <p>2.PC端小图标性能更佳、小图标尺寸修改不用改原图；</p>
               <ul>
-                <li>PC端优化请求体积时， 可将部分（不是所有）雪碧图换成小图标， 字体图标比雪碧图的http请求要少；（加载一个页面时可能有多张雪碧图，但字体图标文件就一个）</li>
+                <li>PC端优化请求体积时，可将部分（不是所有）雪碧图换成小图标，字体图标比雪碧图的http请求要少；（加载一个页面时可能有多张雪碧图，但字体图标文件就一个）</li>
+                <li>PC端做换肤业务时，使用了字体图标实现起来更加的优雅、方便；</li>
               </ul>
             </li>
 
