--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
           <li>
             <p>22.字体图标:</p>
             <ul>
-              <li><a href="webfont/index.html" target="_blank">webfont/index.html</a></li>
+              <li><a href="iconfont/index.html" target="_blank">iconfont/index.html</a></li>
             </ul>
           </li>
 
