字体图标demo完成

--- a/iconfont/myDemo/my_demo.html
+++ b/iconfont/myDemo/my_demo.html
@@ -4,19 +4,17 @@
 <head>
     <meta charset="utf-8"/>
     <title>IconFont</title>
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../iconfontDemo/demo.css">
 
     <style type="text/css">
 
-        @font-face {
-          font-family: "iconfont";
+        @font-face {font-family: "iconfont";
           src: url('iconfont.eot'); /* IE9*/
           src: url('iconfont.eot#iefix') format('embedded-opentype'), /* IE6-IE8 */
           url('iconfont.woff') format('woff'), /* chrome, firefox */
           url('iconfont.ttf') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
           url('iconfont.svg#iconfont') format('svg'); /* iOS 4.1- */
         }
-
         .iconfont {
           font-family:"iconfont" !important;
           font-size:16px;
@@ -25,24 +23,79 @@
           -webkit-text-stroke-width: 0.2px;
           -moz-osx-font-smoothing: grayscale;
         }
+        .icon_wrap{
+            position: relative;
+            width:55px;
+            height: 100px;
+            cursor: pointer;
+            float: left;
+            margin-left: 20px;
+        }
+        .icon_wrap:first-child{
+            margin-left: 0px;
+        }
+        .markdown
+        .icon_hat,
+        .icon_fan,
+        .icon_sad{
+            font-size: 42px;
+            line-height: 100px;
+            margin: 0px 0;
+            color: #333;
+            -webkit-transition: font-size 0.25s ease-out 0s;
+            -moz-transition: font-size 0.25s ease-out 0s;
+            transition: font-size 0.25s ease-out 0s;
+        }
+        .icon_hat{
+            position: absolute;
+            top: -15px;
+            left: 0px;
+        }
+        .icon_sad{
+            display: none;
+        }
+        .icon_wrap:hover .icon_fan{
+            display: none;
+        }
+        .icon_wrap:hover .icon_hat{
+            color: green;
+        }
+        .icon_wrap:hover .icon_sad{
+            display: inline;
+        }
 
     </style>
 </head>
 <body>
     <div class="main markdown">
         <h1>IconFont 实践demo</h1>
-        <ul class="icon_lists clear">
-            <li>
-                <i class="icon iconfont">&#xe69c;</i>
-                <div class="name">cry</div>
-                <div class="code">&amp;#xe69c;</div>
-            </li>
-            <li>
-                <i class="icon iconfont">&#xe6a3;</i>
-                <div class="name">help</div>
-                <div class="code">&amp;#xe6a3;</div>
-            </li>
-        </ul>
+        <div class="icon_wrap_parent">
+            <div class="icon_wrap">
+                <i class="icon_hat iconfont">&#xe603;</i>
+                <i class="icon_fan iconfont">&#xe604;</i>
+                <i class="icon_sad iconfont">&#xe605;</i>
+            </div>
+            <div class="icon_wrap">
+                <i class="icon_hat iconfont">&#xe603;</i>
+                <i class="icon_fan iconfont">&#xe604;</i>
+                <i class="icon_sad iconfont">&#xe605;</i>
+            </div>
+            <div class="icon_wrap">
+                <i class="icon_hat iconfont">&#xe603;</i>
+                <i class="icon_fan iconfont">&#xe604;</i>
+                <i class="icon_sad iconfont">&#xe605;</i>
+            </div>
+            <div class="icon_wrap">
+                <i class="icon_hat iconfont">&#xe603;</i>
+                <i class="icon_fan iconfont">&#xe604;</i>
+                <i class="icon_sad iconfont">&#xe605;</i>
+            </div>
+            <div class="icon_wrap">
+                <i class="icon_hat iconfont">&#xe603;</i>
+                <i class="icon_fan iconfont">&#xe604;</i>
+                <i class="icon_sad iconfont">&#xe605;</i>
+            </div>
+        </div>
         <h2 id="unicode-">unicode引用</h2>
         <hr>
         <p>unicode是字体在网页端最原始的应用方式，特点是：</p>
