--- a/iconfont/scene.html
+++ b/iconfont/scene.html
@@ -16,7 +16,7 @@
           <h1>图标字体使用场景</h1>
           <ul>
             <li>
-              <p>1.web app(H5) 小图标 放大失真问题解决；</p>
+              <h3>1.web app(H5) 小图标 放大失真问题解决；</h3>
               <ul>
                 <li>移动页面大多数情况没办法用雪碧图，用了雪碧图表示图片大小固定了，而移动端需要兼容不同屏幕大小的移动设备，这就需要图片是可以根据屏幕尺寸而改变的。
                 如果你的图尺寸是固定的，那就可以用雪碧图。</li>
@@ -24,9 +24,9 @@
             </li>
 
             <li>
-              <p>2.PC端小图标性能更佳、小图标尺寸修改不用改原图；</p>
+              <h3>2.PC端小图标性能更佳、小图标尺寸修改不用改原图；</h3>
               <ul>
-                <li>PC端优化请求体积时，可将部分（不是所有）雪碧图换成小图标，字体图标比雪碧图的http请求要少；（加载一个页面时可能有多张雪碧图，但字体图标文件就一个）</li>
+                <li>PC端页面优化，可将部分（不是所有）雪碧图换成小图标，字体图标比雪碧图的http请求要少、体积要小；（加载一个页面时可能有多张雪碧图，但使用字体图标，文件一个就够）</li>
                 <li>PC端做换肤业务时，使用了字体图标实现起来更加的优雅、方便；</li>
               </ul>
             </li>
