图标字体demo更新

--- a/iconfont/scene.html
+++ b/iconfont/scene.html
@@ -30,7 +30,28 @@
                 <li>PC端做换肤业务时，使用了字体图标实现起来更加的优雅、方便；</li>
               </ul>
             </li>
+          </ul>
 
+          <hr/>
+          <h1>图标字体优缺点</h1>
+          <ul>
+            <li>
+              <h3>1.优点；</h3>
+              <ul>
+                <li>轻量（文件体积小）、灵活（样式可改变图标）、兼容性好（IE8+）。</li>
+                <li>icoMoon IE7支持实现原理：</li>
+                <li>样式上用*zoom 触发重绘（触发haslayout）， 脚本上检测 关键字className动态插入dom节点实现；</li>
+              </ul>
+            </li>
+
+            <li>
+              <h3>2.缺点；</h3>
+              <ul>
+                <li>图标只能单色调（太复杂的多色图标无法实现）、生成图标字体相对花时间。</li>
+                <li>阿里巴巴iconfont+ 多色图标实现原理： </li>
+                <li>生成svg合集， 然后使用svg呈现图标。</li>
+              </ul>
+            </li>
           </ul>
 
       </div>
